addons/opa-gatekeeper/container-limits/cases/no-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: registry.rafay.us/nginx-demo:latest
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
      resources:
        requests:
          cpu: "250m"
          memory: "128Mi"
  terminationGracePeriodSeconds: 0
