addons/opa-gatekeeper/container-limits/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - "Pod"
    excludedNamespaces:
      - "kube-system"
      - "rafay-infra"
      - "rafay-system"
