addons/opa-gatekeeper/container-limits/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8scontainerlimits
spec:
  crd:
    spec:
      names:
        kind: K8sContainerLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainerlimits
        
        canonify_cpu(orig) = new {
          is_number(orig)
          new := orig * 1000
        }
        
        canonify_cpu(orig) = new {
          not is_number(orig)
          endswith(orig, "m")
          new := to_number(replace(orig, "m", ""))
        }
        
        canonify_cpu(orig) = new {
          not is_number(orig)
          not endswith(orig, "m")
          re_match("^[0-9]+(\\.[0-9]+)?$", orig)
          new := to_number(orig) * 1000
        }
        
        canonify_mem(orig) = new {
          not is_number(orig)
          suffix := get_suffix(orig)
          raw := replace(orig, suffix, "")
          re_match("^[0-9]+(\\.[0-9]+)?$", raw)
          new := to_number(raw) * mem_multiple(suffix)
        }
        
        get_suffix(mem) = suffix {
          not is_string(mem)
          suffix := ""
        }
        
        get_suffix(mem) = suffix {
          is_string(mem)
          count(mem) > 0
          suffix := substring(mem, count(mem) - 1, -1)
          mem_multiple(suffix)
        }
        
        get_suffix(mem) = suffix {
          is_string(mem)
          count(mem) > 1
          suffix := substring(mem, count(mem) - 2, -1)
          mem_multiple(suffix)
        }
        
        get_suffix(mem) = suffix {
          is_string(mem)
          count(mem) > 1
          not mem_multiple(substring(mem, count(mem) - 1, -1))
          not mem_multiple(substring(mem, count(mem) - 2, -1))
          suffix := ""
        }
        
        get_suffix(mem) = suffix {
          is_string(mem)
          count(mem) == 1
          not mem_multiple(substring(mem, count(mem) - 1, -1))
          suffix := ""
        }
        
        get_suffix(mem) = suffix {
          is_string(mem)
          count(mem) == 0
          suffix := ""
        }
        
        # 10 ** 21
        mem_multiple("E") = 1000000000000000000000 { true }
        
        # 10 ** 18
        mem_multiple("P") = 1000000000000000000 { true }
        
        # 10 ** 15
        mem_multiple("T") = 1000000000000000 { true }
        
        # 10 ** 12
        mem_multiple("G") = 1000000000000 { true }
        
        # 10 ** 9
        mem_multiple("M") = 1000000000 { true }
        
        # 10 ** 6
        mem_multiple("k") = 1000000 { true }
        
        # 10 ** 3
        mem_multiple("") = 1000 { true }
        
        # 10 ** 0
        mem_multiple("m") = 1 { true }
        
        # 1000 * 2 ** 10
        mem_multiple("Ki") = 1024000 { true }
        
        # 1000 * 2 ** 20
        mem_multiple("Mi") = 1048576000 { true }
        
        # 1000 * 2 ** 30
        mem_multiple("Gi") = 1073741824000 { true }
        
        # 1000 * 2 ** 40
        mem_multiple("Ti") = 1099511627776000 { true }
        
        # 1000 * 2 ** 50
        mem_multiple("Pi") = 1125899906842624000 { true }
        
        # 1000 * 2 ** 60
        mem_multiple("Ei") = 1152921504606846976000 { true }
        
        missing(obj, field) = true {
          not obj[field]
        }
        
        missing(obj, field) = true {
          obj[field] == ""
        }
        
        canonify_mem(orig) = new {
          is_number(orig)
          new := orig * 1000
        }
        
        violation[{"msg": msg}] {
          general_violation[{"msg": msg, "field": "containers"}]
        }
        
        violation[{"msg": msg}] {
          general_violation[{"msg": msg, "field": "initContainers"}]
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          not container.resources
          msg := sprintf("container <%v> has no resource limits", [container.name])
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          not container.resources.limits
          msg := sprintf("container <%v> has no resource limits", [container.name])
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          missing(container.resources.limits, "cpu")
          msg := sprintf("container <%v> has no cpu limit", [container.name])
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          missing(container.resources.limits, "memory")
          msg := sprintf("container <%v> has no memory limit", [container.name])
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          cpu_orig := container.resources.limits.cpu
          not canonify_cpu(cpu_orig)
          msg := sprintf("container <%v> cpu limit <%v> could not be parsed", [container.name, cpu_orig])
        }
        
        general_violation[{"msg": msg, "field": field}] {
          container := input.review.object.spec[field][_]
          mem_orig := container.resources.limits.memory
          not canonify_mem(mem_orig)
          msg := sprintf("container <%v> memory limit <%v> could not be parsed", [container.name, mem_orig])
        }
